--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,27 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <script src="./index.js"></script>
+    <header id="header" class="header">
+      <form class="search-form" id="search-form">
+        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+        <button type="submit">Search</button>
+      </form>
+    </header>
+    <section id="section" class="section">
+      <div class="gallery"></div>
+      <a class="gallery-end__text visually-hidden" href="#section">
+        "We're sorry, but you've reached the end of search results."
+      </a>
+      <div id="preloader" class="visually-hidden">
+        <div class="preloader__first"></div>
+        <div class="preloader__second"></div>
+        <div class="preloader__third"></div>
+      </div>
+    </section>
+    <script src="./js/index.js"></script>
   </body>
 </html>
